[tool.poetry]
name = "decode-morse-code-and-bits"
version = "0.1.0"
description = "Decode Morse-code and bits into readable english."
authors = ["Alex Mourtos"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
